Feature/express (#17)
* docs:file added

* docs:file added

* docs:file updated

* docs:file updated

* docs:file updated

* docs:file modified

* feat:remove import and use require

* docs:remove some rules

* docs:remove module

* feat:db and models created in different folder
